# nlp-victorianAuthor

./: .gitignore  .markdownlint.json  .mdformat.toml  .pre-commit-config.yaml  README.md  author.py  downloadData.bash  downloadDataset.bash  downloadModels.bash  pyproject.toml  requirements.txt  run.bash
demos/: baselineDemo_CV.py  baselineDemo_TFIDF.py  cnnDemo.py  rnnDemo.py
models/: authorship.py
nlp_final/: authorship.py  common.py  dataHandler.py  main.py  test.py  trainBertModel.py  trainFastText.py  trainMLP.py  trainTFIDF.py  trainVEAA.py  trainVEAA_MNNB.py  trainWord2Vec.py
nlp_final/args/: __init__.py  args.py
nlp_final/baseline/: mnnb_CV_ClassificationReport.csv  trainVEAA_MNNB_CV.py  trainVEAA_MNNB_TFIDF.py
nlp_final/baseline/reports/: mmnb_CV_ClassificationReport.csv  mmnb_TFIDF_ClassificationReport.csv  mnnb_TFIDF_ClassificationReport.csv
nlp_final/cnn/: trainVEAA_CNN.py
nlp_final/data/: data.py  dataHandler.py
nlp_final/logs/veaa-20230425-144738/train/: events.out.tfevents.1682452125.MSI.32597.0.v2
nlp_final/logs/veaa-20230425-144906/train/: events.out.tfevents.1682452217.MSI.591.0.v2
nlp_final/logs/veaa-20230425-145221/train/: events.out.tfevents.1682452409.MSI.32159.0.v2
nlp_final/logs/veaa-20230425-150357/train/: events.out.tfevents.1682453104.MSI.32753.0.v2
nlp_final/logs/veaa-20230425-150616/train/: events.out.tfevents.1682453244.MSI.495.0.v2
nlp_final/rnn/: trainVEAA_RNN.py
nlp_final/train/: classifier.py  train.py  vectorizer.py
report/: COMP329-429_Montenegro_Synovic_Nelson_Final Paper.docx  COMP329-429_Montenegro_Synovic_Nelson_Final Paper.odt
take2/: trainFastText.py  trainTFIDF.py
(+4 files in other folders)
