[tool.poetry]
name = "nlp-final"
version = "0.1.0"
description = ""
authors = ["Giorgio Montenegro <gmontenegro@luc.edu>", "Nicholas M. Synovic <nicholas.synovic@gmail.com>", "Nelson Stefan <snelson9@luc.edu>"]
readme = "README.md"
packages = [{include = "nlp_victorianauthor"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
