[tool.poetry]
name = "nlp-final"
version = "0.1.0"
description = ""
authors = ["Giorgio Montenegro <gmontenegro@luc.edu>", "Nicholas M. Synovic <nicholas.synovic@gmail.com>", "Nelson Stefan <snelson9@luc.edu>"]
readme = "README.md"
packages = [{include = "nlp_final"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
gensim = "^4.3.1"
transformers = "^4.28.1"
torch = "^2.0.0"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
